Minor changes to Poker game.